Corrigiendo la tilde

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Este es mi blog personal</h1>
-    <p>Bailame que tu ritmo me vuelve loco Salomé</p>
+    <p>Bailame que tu ritmo me vuelve loco Salom&eacute;</p>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
