--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Aaron Joel</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Men&uacute;</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,9 +46,56 @@
             </ul>
         </div>
     </nav>
-    <h1>Este es mi blog personal</h1>
-    <p>Bailame que tu ritmo me vuelve loco Salom&eacute;</p>
-
+    <!-- Header -->
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <h1>Hola! Soy Aaron Joel, desarrollador frontend junior apasionado por el desarrollo web</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- /Header -->
+    <!-- Proyectos -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="Primer proyecto">
+                    <div class="card-body">
+                      <h5 class="card-title">Juego de Sim&oacute;n dice</h5>
+                      <p class="card-text">Juego desarrollado durante el curso de Fundamentos de Javascript en Platzi.</p>
+                      <a href="#" class="btn btn-primary">Echa un vistazo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="Segundo proyecto">
+                    <div class="card-body">
+                      <h5 class="card-title">Amaze Movies</h5>
+                      <p class="card-text">Aplicación de pel&iacute;culas desarrolada en Java durante el 
+                          curso de Java en Platzi.</p>
+                      <a href="#" class="btn btn-primary">Proyecto en construcci&oacute;n</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="Tercer proyecto">
+                    <div class="card-body">
+                      <h5 class="card-title">Platzi ventas</h5>
+                      <p class="card-text">Aplicación de terminal, desarrollada en python para llevar registro de 
+                          clientes.
+                      </p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Proyectos -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
