--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     </header>
     <!-- /Header -->
     <!-- Proyectos -->
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="Primer proyecto">
                     <div class="card-body">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="Segundo proyecto">
                     <div class="card-body">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col">
                 <div class="card text-center" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="Tercer proyecto">
                     <div class="card-body">
