--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="col">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="Primer proyecto">
+                    <img src="https://images.pexels.com/photos/2148217/pexels-photo-2148217.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" class="card-img-top" alt="Primer proyecto">
                     <div class="card-body">
                       <h5 class="card-title">Juego de Sim&oacute;n dice</h5>
                       <p class="card-text">Juego desarrollado durante el curso de Fundamentos de Javascript en Platzi.</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="col">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="Segundo proyecto">
+                    <img src="https://images.pexels.com/photos/2089379/pexels-photo-2089379.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" class="card-img-top" alt="Segundo proyecto">
                     <div class="card-body">
                       <h5 class="card-title">Amaze Movies</h5>
                       <p class="card-text">Aplicación de pel&iacute;culas desarrolada en Java durante el 
@@ -103,7 +103,7 @@
             </div>
             <div class="col">
                 <div class="card text-center" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="Tercer proyecto">
+                    <img src="https://images.pexels.com/photos/92904/pexels-photo-92904.jpeg?cs=srgb&dl=cellphone-codes-coding-92904.jpg&fm=jpg" class="card-img-top" alt="Tercer proyecto">
                     <div class="card-body">
                       <h5 class="card-title">Platzi ventas</h5>
                       <p class="card-text">Aplicación de terminal, desarrollada en python para llevar registro de 
