--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
             </div>
         </div>
     </div>
+    <div class="dropdown-divider mt-4 mb-4"></div>
+    <!-- Perfil -->
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-3">
@@ -137,6 +139,7 @@
             </div>
         </div>
     </div>
+    <!-- /Perfil -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
