--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./asstes/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Aaron Joel</title>
 </head>
 <body>
     <!-- Menu fijo -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="inicio">
         <a class="navbar-brand" href="#">Aaron Joel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#inicio">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Proyectos</a>
+                    <a class="nav-link" href="#projects">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Perfil</a>
+                    <a class="nav-link" href="#perfil">Perfil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Escr&iacute;beme</a>
@@ -48,13 +49,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#inicio">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Proyectos</a>
+                <a class="nav-link" href="#projects">Proyectos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Perfil</a>
+                <a class="nav-link" href="#perfil">Perfil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Escr&iacute;beme</a>
@@ -67,7 +68,7 @@
     </nav>
     <!-- /Menu movil -->
     <!-- Header -->
-    <header>
+    <header id="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
@@ -78,7 +79,7 @@
     </header>
     <!-- /Header -->
     <!-- Proyectos -->
-    <div class="container">
+    <div class="container" id="projects">
         <div class="row">
             <div class="col">
                 <div class="card text-center" style="width: 18rem;">
@@ -115,9 +116,10 @@
             </div>
         </div>
     </div>
-    <div class="dropdown-divider mt-4 mb-4"></div>
+    <br>
+    <br>
     <!-- Perfil -->
-    <div class="container">
+    <div class="container" id="perfil">
         <div class="row">
             <div class="col-md-6 offset-3">
                 <div class="card mb-3" style="max-width: 540px;">
