Detalles del menú

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#perfil">Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Escr&iacute;beme</a>
+                    <a class="nav-link" href="#writeMe">Escr&iacute;beme</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">M&aacute;s sobre m&iacute;</a>
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="#perfil">Perfil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Escr&iacute;beme</a>
+                <a class="nav-link" href="#writeMe">Escr&iacute;beme</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">M&aacute;s sobre m&iacute;</a>
@@ -80,6 +80,13 @@
     <!-- /Header -->
     <!-- Proyectos -->
     <div class="container" id="projects">
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h1>Proyectos en los que particip&eacute;</h1>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div class="card text-center" style="width: 18rem;">
@@ -110,7 +117,7 @@
                       <p class="card-text">Aplicación de terminal, desarrollada en python para llevar registro de 
                           clientes.
                       </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary">Echa un vistazo</a>
                     </div>
                 </div>
             </div>
@@ -120,6 +127,13 @@
     <br>
     <!-- Perfil -->
     <div class="container" id="perfil">
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h1>Conoce m&aacute;s sobre m&iacute;</h1>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-6 offset-3">
                 <div class="card mb-3" style="max-width: 540px;">
@@ -142,6 +156,36 @@
         </div>
     </div>
     <!-- /Perfil -->
+    <!-- Form -->
+    <div class="container" id="writeMe">
+        <br>
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h1>Trabajemos juntos</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 offset-3">
+                <form>
+                    <div class="form-group text-center">
+                        <label for="exampleFormControlInput1">M&aacute;ndame un email</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group text-center">
+                        <label for="exampleFormControlTextarea1">Déjame tus comentarios</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <div class="col-md-2 offset-5">
+                        <button type="submit" class="btn btn-primary mb-2">Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- /Form -->
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
