Corrigiendo para pantalla movil

--- a/index.html
+++ b/index.html
@@ -80,16 +80,15 @@
     <!-- /Header -->
     <!-- Proyectos -->
     <div class="container" id="projects">
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
+
+        <div class="row text-center">
+            <div class="col-sm-12 col-md-12">
                 <h1>Proyectos en los que particip&eacute;</h1>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center mb-2" style="width: 18rem;">
                     <img src="https://images.pexels.com/photos/2148217/pexels-photo-2148217.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" class="card-img-top" alt="Primer proyecto">
                     <div class="card-body">
                       <h5 class="card-title">Juego de Sim&oacute;n dice</h5>
@@ -99,7 +98,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center mb-2" style="width: 18rem;">
                     <img src="https://images.pexels.com/photos/2089379/pexels-photo-2089379.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" class="card-img-top" alt="Segundo proyecto">
                     <div class="card-body">
                       <h5 class="card-title">Amaze Movies</h5>
@@ -110,7 +109,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card text-center" style="width: 18rem;">
+                <div class="card text-center mb-2" style="width: 18rem;">
                     <img src="https://images.pexels.com/photos/92904/pexels-photo-92904.jpeg?cs=srgb&dl=cellphone-codes-coding-92904.jpg&fm=jpg" class="card-img-top" alt="Tercer proyecto">
                     <div class="card-body">
                       <h5 class="card-title">Platzi ventas</h5>
@@ -123,19 +122,18 @@
             </div>
         </div>
     </div>
-    <br>
-    <br>
     <!-- Perfil -->
     <div class="container" id="perfil">
         <br>
         <br>
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
+        <div class="row text-center">
+            <div class="col-sm-12 col-md-12">
                 <h1>Conoce m&aacute;s sobre m&iacute;</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 offset-3">
+            <div class="col-sm-12 col-md-3"></div>
+            <div class="col-sm-12 col-md-6">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
@@ -153,19 +151,23 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-12 col-md-3"></div>
         </div>
     </div>
     <!-- /Perfil -->
     <!-- Form -->
     <div class="container" id="writeMe">
         <br>
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
+        <div class="row text-center">
+            
+            <div class="col-sm-12 col-md-12">
                 <h1>Trabajemos juntos</h1>
             </div>
+            
         </div>
         <div class="row">
-            <div class="col-md-6 offset-3">
+            <div class="col-sm-12 col-md-3"></div>
+            <div class="col-sm-12 col-md-6">
                 <form>
                     <div class="form-group text-center">
                         <label for="exampleFormControlInput1">M&aacute;ndame un email</label>
@@ -180,6 +182,7 @@
                     </div>
                 </form>
             </div>
+            <div class="col-sm-12 col-md-3"></div>
         </div>
     </div>
     <!-- /Form -->
