Siempre trabaja en ramas

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <!-- /Menu fijo -->
     <!-- Menu movil -->
-    <nav class="navbar fixed-top navbar-expand-lg bubble">
+    <nav class="navbar fixed-top navbar-expand-lg bg-dark navbar-dark">
         <a class="navbar-brand" href="#">Aaron Joel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
