Montando link para Simon

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Juego de Sim&oacute;n dice</h5>
                       <p class="card-text">Juego desarrollado durante el curso de Fundamentos de Javascript en Platzi.</p>
-                      <a href="#" class="btn btn-primary">Echa un vistazo</a>
+                      <a href="./juegoDeSimonDiceByJLQ.html" class="btn btn-primary">Echa un vistazo</a>
                     </div>
                 </div>
             </div>
