--- a/index.html
+++ b/index.html
@@ -1,30 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="./icons/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./icons/style.css" />
     <title>Aaron Joel</title>
-</head>
-<body>
-    <nav class="menu">
-        <a class="menu-option">Home</a>
-        <a class="menu-option">About me</a>
-        <a class="menu-option">Portfolio</a>
-        <a class="menu-option">Services</a>
-        <a class="menu-option">Contact me</a>
-        <a class="menu-social">
+  </head>
+  <body>
+    <nav class="nav">
+      <ul class="menu">
+        <li class="menu-item">
+          <a class="menu-option">Home</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-option">About me</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-option">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-option">Services</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-option">Contact me</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-social">
             <i class="icon-twitter"></i>
             <i class="icon-github"></i>
             <!-- <i>Platzi</i> -->
             <!-- <i class="icon-gmail"></i> -->
             <i class="icon-instagram"></i>
-        </a>
+          </a>
+        </li>
+      </ul>
     </nav>
+    <main>
+      <div class="name">Aaron</div>
+      <section class="content">
+        <div class="hero">
+          <h1 class="title">I AM A FRONTEND DEVELOPER</h1>
+          <span class="sub-title">I do love programming</span>
+          <p class="description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
+            molestiae illo ex sint quae similique delectus? Nemo reprehenderit,
+            illo omnis quaerat provident explicabo consequuntur, vero aliquid
+            eum non dicta possimus.
+          </p>
+          <a href="" class="btn-red">READ MORE</a>
+        </div>
+        <div class="vitae">
+          <div class="vitae-title">CREATIVE AND PROFESSIONAL</div>
+          <div class="vitae-profile">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              perferendis explicabo eaque nobis omnis excepturi ea, atque
+              aperiam possimus aliquam nemo voluptates molestiae quo
+              repudiandae. Sequi recusandae vel obcaecati incidunt!
+            </p>
+          </div>
+          <div class="vitae-btn-red">
+            <button class="btn-red">READ MORE</button>
+          </div>
+          <div class="vitae-me">
+            <img class="me-photo" src="assets/pp.jpg" alt="photo" />
+            <div class="me-name">Aaron J. Limachi</div>
+            <div class="me-description">
+              Desarrollador web frontend en JavaScript
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <div style="height: 1000px;"></div>
-    <div style="height: 1000px;"></div>
-    <div style="height: 1000px;"></div>
-</body>
+  </body>
 </html>
