--- a/index.html
+++ b/index.html
@@ -72,6 +72,27 @@
             </div>
           </div>
         </div>
+        <div class="projects">
+            <h3 class="projects-title">Selected work</h3>
+            <div class="projects-list">
+                <div class="projects-project">
+                    <img src="" alt="">
+                    <span></span>
+                </div>
+                <div class="projects-project">
+                    <img src="" alt="">
+                    <span></span>
+                </div>
+                <div class="projects-project">
+                    <img src="" alt="">
+                    <span></span>
+                </div>
+                <div class="projects-project">
+                    <img src="" alt="">
+                    <span></span>
+                </div>
+            </div>
+        </div>
       </section>
     </main>
     <div style="height: 1000px;"></div>
