--- a/index.html
+++ b/index.html
@@ -72,29 +72,24 @@
             </div>
           </div>
         </div>
-        <div class="projects">
-            <h3 class="projects-title">Selected work</h3>
-            <div class="projects-list">
-                <div class="projects-project">
-                    <img src="" alt="">
-                    <span></span>
-                </div>
-                <div class="projects-project">
-                    <img src="" alt="">
-                    <span></span>
-                </div>
-                <div class="projects-project">
-                    <img src="" alt="">
-                    <span></span>
-                </div>
-                <div class="projects-project">
-                    <img src="" alt="">
-                    <span></span>
-                </div>
-            </div>
-        </div>
       </section>
+      <div class="projects">
+        <h3 class="projects-title">Selected work</h3>
+        <div class="projects-list">
+            <a class="project" id="job-1">
+                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
+            </a>
+            <a class="project" id="job-2">
+                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
+            </a>
+            <a class="project" id="job-3">
+                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
+            </a>
+            <a class="project" id="job-4">
+                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
+            </a>
+        </div>
+      </div>
     </main>
-    <div style="height: 1000px;"></div>
   </body>
 </html>
