Responsive, primera seccion

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Aaron Joel</title>
   </head>
   <body>
+    <i class="icon-hamburger"></i>
     <nav class="nav">
       <ul class="menu">
         <li class="menu-item">
@@ -26,15 +27,15 @@
         <li class="menu-item">
           <a class="menu-option">Contact me</a>
         </li>
-        <li class="menu-item">
+        <!-- <li class="menu-item">
           <a class="menu-social">
             <i class="icon-twitter"></i>
             <i class="icon-github"></i>
-            <!-- <i>Platzi</i> -->
-            <!-- <i class="icon-gmail"></i> -->
+            <i class="icon-platzi"></i>
+            <i class="icon-gmail"></i>
             <i class="icon-instagram"></i>
           </a>
-        </li>
+        </li> -->
       </ul>
     </nav>
     <main>
@@ -75,20 +76,12 @@
       </section>
       <div class="projects">
         <h3 class="projects-title">Selected work</h3>
-        <div class="projects-list">
-            <a class="project" id="job-1">
-                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
-            </a>
-            <a class="project" id="job-2">
-                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
-            </a>
-            <a class="project" id="job-3">
-                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
-            </a>
-            <a class="project" id="job-4">
-                <!-- <div>Pagina de películas para el curso de CSS Grid Layout en PLatzi</div> -->
-            </a>
-        </div>
+        <!-- <div class="projects-list">
+            <a class="project" id="job-1"></a>
+            <a class="project" id="job-2"></a>
+            <a class="project" id="job-3"></a>
+            <a class="project" id="job-4"></a>
+        </div> -->
       </div>
     </main>
   </body>
