--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <ul class="menu">
         <li class="menu-item">
           <a class="menu-option">Home</a>
-        </li>
+        </li> 
         <li class="menu-item">
-          <a class="menu-option">About me</a>
+          <a class="menu-option" href="">About me</a>
         </li>
         <li class="menu-item">
           <a class="menu-option">Portfolio</a>
@@ -27,15 +27,9 @@
         <li class="menu-item">
           <a class="menu-option">Contact me</a>
         </li>
-        <!-- <li class="menu-item">
-          <a class="menu-social">
-            <i class="icon-twitter"></i>
-            <i class="icon-github"></i>
-            <i class="icon-platzi"></i>
-            <i class="icon-gmail"></i>
-            <i class="icon-instagram"></i>
-          </a>
-        </li> -->
+        <li class="menu-item">
+          <a class="menu-option">Games</a>
+        </li>
       </ul>
     </nav>
     <main>
@@ -76,13 +70,32 @@
       </section>
       <div class="projects">
         <h3 class="projects-title">Selected work</h3>
-        <!-- <div class="projects-list">
+        <div class="projects-list">
             <a class="project" id="job-1"></a>
             <a class="project" id="job-2"></a>
-            <a class="project" id="job-3"></a>
-            <a class="project" id="job-4"></a>
-        </div> -->
+            <!-- <a class="project" id="job-3"></a> -->
+            <!-- <a class="project" id="job-4"></a> -->
+        </div>
       </div>
     </main>
+    <footer class="footer">
+      <ul class="menu-footer">
+        <a class="menu-social" href="">
+          <i class="icon-twitter"></i>
+        </a>
+        <a class="menu-social" href="">
+          <i class="icon-github"></i>
+        </a>
+        <!-- <a class="menu-social" href="">
+          <i class="icon-platzi"> </i>
+        </a> -->
+        <!-- <a class="menu-social" href="">
+          <i class="icon-gmail"></i>
+        </a> -->
+        <a class="menu-social" href="">
+          <i class="icon-instagram"></i>
+        </a>
+      </ul>
+    </footer>
   </body>
 </html>
