--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Aaron Joel</title>
   </head>
   <body>
-    <i class="icon-hamburger"></i>
+    <a href=""><i class="icon-hamburger"></i></a>
     <nav class="nav">
       <ul class="menu">
         <li class="menu-item">
@@ -39,10 +39,9 @@
           <h1 class="title">I AM A FRONTEND DEVELOPER</h1>
           <span class="sub-title">I do love programming</span>
           <p class="description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
-            molestiae illo ex sint quae similique delectus? Nemo reprehenderit,
-            illo omnis quaerat provident explicabo consequuntur, vero aliquid
-            eum non dicta possimus.
+            Hello! My name is Aaron Joel, and I'm a Bolivia-based freelancer. 
+            I have a diverse set of skills, ranging from design, to HTML, CSS, Grid Layout,
+             Responsive Desing, Javascript, Bootstrap, Version control with Git and SCRUM
           </p>
           <a href="" class="btn-red">READ MORE</a>
         </div>
@@ -50,20 +49,19 @@
           <div class="vitae-title">CREATIVE AND PROFESSIONAL</div>
           <div class="vitae-profile">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-              perferendis explicabo eaque nobis omnis excepturi ea, atque
-              aperiam possimus aliquam nemo voluptates molestiae quo
-              repudiandae. Sequi recusandae vel obcaecati incidunt!
+              Disfruto de la construcción de sitios web desde pequeños negocios hasta robustas aplicaciones web. Si eres una empresa buscando presencia web
+              o un empleador buscando contratar, puedes contactarme aquí.
             </p>
           </div>
           <div class="vitae-btn-red">
-            <button class="btn-red">READ MORE</button>
+            <button class="btn-red">Necesito un website</button>
+            <button class="btn-red">Busco contratar</button>
           </div>
           <div class="vitae-me">
             <img class="me-photo" src="assets/pp.jpg" alt="photo" />
             <div class="me-name">Aaron J. Limachi</div>
             <div class="me-description">
-              Desarrollador web frontend en JavaScript
+              Desarrollador web frontend
             </div>
           </div>
         </div>
