--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a class="menu-option">Home</a>
         </li> 
         <li class="menu-item">
-          <a class="menu-option" href="">About me</a>
+          <a class="menu-option" href="./index.html">About me</a>
         </li>
         <li class="menu-item">
           <a class="menu-option">Portfolio</a>
@@ -28,7 +28,7 @@
           <a class="menu-option">Contact me</a>
         </li>
         <li class="menu-item">
-          <a class="menu-option">Games</a>
+          <a class="menu-option" href="./SimonSays.html">Games</a>
         </li>
       </ul>
     </nav>
