--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="stylesheet" href="./icons/style.css" />
     <title>Aaron Joel</title>
+    <meta name="description" content="Construye tu sitio web de la mano de un experto">
+    <link rel="shortcut icon" href="./assets/logo.jpg">
   </head>
   <body>
     <a href=""><i class="icon-hamburger"></i></a>
