Me encendi en ira y lo borre todo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="menu-option" href="./index.html">About me</a>
         </li>
         <li class="menu-item">
-          <a class="menu-option">Portfolio</a>
+          <a class="menu-option" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="menu-item">
           <a class="menu-option">Services</a>
@@ -80,10 +80,10 @@
     </main>
     <footer class="footer">
       <ul class="menu-footer">
-        <a class="menu-social" href="">
+        <a class="menu-social" href="https://twitter.com/42Joel54">
           <i class="icon-twitter"></i>
         </a>
-        <a class="menu-social" href="">
+        <a class="menu-social" href="https://github.com/LimjoJin">
           <i class="icon-github"></i>
         </a>
         <!-- <a class="menu-social" href="">
