--- a/index.html
+++ b/index.html
@@ -1,101 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="stylesheet" href="./icons/style.css" />
-    <title>Aaron Joel</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DevDuxAaron</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <meta name="description" content="Construye tu sitio web de la mano de un experto">
     <link rel="shortcut icon" href="./assets/logo.jpg">
-  </head>
-  <body>
-    <a href=""><i class="icon-hamburger"></i></a>
-    <nav class="nav">
-      <ul class="menu">
-        <li class="menu-item">
-          <a class="menu-option">Home</a>
-        </li> 
-        <li class="menu-item">
-          <a class="menu-option" href="./index.html">About me</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-option" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-option">Services</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-option">Contact me</a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-option" href="./SimonSays.html">Games</a>
-        </li>
-      </ul>
-    </nav>
+</head>
+<body>
+    <section class="hero">
+        <div class="hero-image">
+            <img src="./assets/pp-removebg-preview.png" alt="">
+        </div>
+        <div class="hero-title">
+            <h1>DevDuxAaron</h1>
+            <h3>Frontend developer</h3>
+        </div>
+        <div class="hero-social">
+            <a href="" class="github"></a>
+            <a href="" class="twitter"></a>
+            <a href="" class="instagram"></a>
+            <a href="" class="linkedin"></a>
+        </div>
+        <div class="hero-description">
+            <h3>What's in my mind</h3>
+            <p>We can develop and design anything beyond your ima gination. About our work, we don’t say anything bec ause our work speaks.
+                 For more, you can ask our clie nts and they will tell you how much satisfied they are with our services. So, what are you waiting for?</p>
+        </div>
+    </section>
     <main>
-      <div class="name">Aaron</div>
-      <section class="content">
-        <div class="hero">
-          <h1 class="title">I AM A FRONTEND DEVELOPER</h1>
-          <span class="sub-title">I do love programming</span>
-          <p class="description">
-            Hello! My name is Aaron Joel, and I'm a Bolivia-based freelancer. 
-            I have a diverse set of skills, ranging from design, to HTML, CSS, Grid Layout,
-             Responsive Desing, Javascript, Bootstrap, Version control with Git and SCRUM
-          </p>
-          <a href="" class="btn-red">READ MORE</a>
-        </div>
-        <div class="vitae">
-          <div class="vitae-title">CREATIVE AND PROFESSIONAL</div>
-          <div class="vitae-profile">
-            <p>
-              Disfruto de la construcción de sitios web desde pequeños negocios hasta robustas aplicaciones web. Si eres una empresa buscando presencia web
-              o un empleador buscando contratar, puedes contactarme aquí.
-            </p>
-          </div>
-          <div class="vitae-btn-red">
-            <button class="btn-red">Necesito un website</button>
-            <button class="btn-red">Busco contratar</button>
-          </div>
-          <div class="vitae-me">
-            <img class="me-photo" src="assets/pp.jpg" alt="photo" />
-            <div class="me-name">Aaron J. Limachi</div>
-            <div class="me-description">
-              Desarrollador web frontend
+        <nav class="menu">
+            <!-- <div class="menu-logo">Hello</div> -->
+            <div class="burger">
+                <a href="#home" class="burger-home">Home</a>
+                <a href="#aboutMe" class="burger-about">About</a>
+                <a href="#skills" class="burger-skill">Skill</a>
+                <a href="#portfolio" class="burger-portfolio">Portfolio</a>
+                <a href="#exercises" class="burger-blog">Exercises</a>
+                <a href="#contact" class="burger-contact">Contact</a>
             </div>
-          </div>
-        </div>
-      </section>
-      <div class="projects">
-        <h3 class="projects-title">Selected work</h3>
-        <div class="projects-list">
-            <a class="project" id="job-1"></a>
-            <a class="project" id="job-2"></a>
-            <!-- <a class="project" id="job-3"></a> -->
-            <!-- <a class="project" id="job-4"></a> -->
-        </div>
-      </div>
+        </nav>
+        <section class="home" id="home">
+            <div class="profile"><img src="./assets/pp-removebg-preview.png" alt=""></div>
+            <h1>Hello</h1>
+            <h3>My name is Aaron</h3>
+            <p>I enjoy building websites from small businesses to robust web applications.</p>
+            <a href="" class="button-blue home-button">View Portfolio</a>
+        </section>
+        <section class="aboutMe" id="aboutMe">
+            <h2><i></i>About me</h2>
+            <p>Hello,I’m Aaron Joel Creative Frontend Developer,
+                I create digital Products for Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, illum alias illo amet magnam maxime. Quia, dolore. Architecto dignissimos veniam consequatur! Iusto sed nisi voluptatum debitis, inventore fugit amet beatae.
+            </p>
+            <div class="container-aboutMe">
+                <div class="aboutMe-menu">
+                    <div class="logo">Logo Design</div>
+                    <div class="websites">Websites</div>
+                    <div class="software">Software</div>
+                    <div class="apps">Applications</div>
+                </div>
+                <div class="aboutMe-details">
+                    <h3>Personal details</h3>
+                    <div class="aboutMe-list">
+                        <ul class="list-field">
+                            <li class="field">Name</li>
+                            <li class="field">Email</li>
+                            <li class="field">Website</li>
+                        </ul>
+                        <ul class="list-dots">
+                            <li class="dots">:</li>
+                            <li class="dots">:</li>
+                            <li class="dots">:</li>
+                        </ul>
+                        <ul class="list-data">
+                            <li class="data">Aaron Joel</li>
+                            <li class="data">devduxaaron@gmail.com</li>
+                            <li class="data">devduxaaron.github.io</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <a href="" class="button-blue">Hire Me</a>
+        </section>
+        <section class="skills" id="skills">
+            <h2><i></i>My skills</h2>
+            <p> I have a diverse set of skills, ranging from design,
+                 to HTML, CSS, Grid Layout, Responsive Desing, Javascript,
+                 Bootstrap, Version control with Git and SCRUM
+            </p>
+            <div class="container-skills">
+                <h3 class="skills-title">Professional skills</h3>
+                <ul class="habilities-list">
+                    <li class="hability">
+                        <span class="name">JavaScript</span>
+                        <span class="percent">65%</span>
+                        <div class="bar">
+                            <div class="advance"></div>
+                        </div>
+                    </li>
+                    <li class="hability">
+                        <span class="name">JavaScript</span>
+                        <span class="percent">65%</span>
+                        <div class="bar">
+                            <div class="advance"></div>
+                        </div>
+                    </li>
+                    <li class="hability">
+                        <span class="name">JavaScript</span>
+                        <span class="percent">65%</span>
+                        <div class="bar">
+                            <div class="advance"></div>
+                        </div>
+                    </li>
+                    <li class="hability">
+                        <span class="name">JavaScript</span>
+                        <span class="percent">65%</span>
+                        <div class="bar">
+                            <div class="advance"></div>
+                        </div>
+                    </li>
+                    <li class="hability">
+                        <span class="name">JavaScript</span>
+                        <span class="percent">65%</span>
+                        <div class="bar">
+                            <div class="advance"></div>
+                        </div>
+                    </li>
+                    <li class="hability">
+                        <span class="name">JavaScript</span>
+                        <span class="percent">65%</span>
+                        <div class="bar">
+                            <div class="advance"></div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="container-languages">
+                <h3 class="languages">Languages skills</h3>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit illo minima ad! Corrupti quod, fuga minima assumenda voluptate perspiciatis atque similique repudiandae possimus officiis est beatae tempora voluptatibus illo. Deleniti?</p>
+                <div class="language-bar">
+                </div>
+                <div class="language-bar">
+                </div>
+            </div>
+        </section>
+        <section class="portfolio" id="portfolio">
+            <h2><i></i>My Portfolio</h2>
+            <p> I have a diverse set of skills, ranging from design,
+                 to HTML, CSS, Grid Layout, Responsive Desing, Javascript,
+                 Bootstrap, Version control with Git and SCRUM
+            </p>
+            <!-- Soon -->
+            <!-- <nav class="menu-selected">
+                <ul>
+                    <li class="filter">All</li>
+                    <li class="filter">Logos</li>
+                    <li class="filter">Websites</li>
+                    <li class="filter">Apps</li>
+                    <li class="filter">Games</li>
+                </ul>
+            </nav> -->
+            <div class="portfolio-projects">
+                <a class="project" href=""><img src="" alt=""></a>
+                <a class="project" href=""><img src="" alt=""></a>
+                <a class="project" href=""><img src="" alt=""></a>
+                <a class="project" href=""><img src="" alt=""></a>
+                <a class="project" href=""><img src="" alt=""></a>
+                <a class="project" href=""><img src="" alt=""></a>
+            </div>
+            <a href="" class="button-blue">More</a>
+        </section>
+        <section class="exercises" id="exercises">
+            <h2><i></i>Solved Exercises</h2>
+            <p> Some of the exercises that I've solved.
+            </p>
+            <!-- Soon -->
+            <!-- <nav class="menu-selected">
+                <ul>
+                    <li class="filter">All</li>
+                    <li class="filter">Jvumsa</li>
+                    <li class="filter">UVA</li>
+                    <li class="filter">TopCoder</li>
+                    <li class="filter">Others</li>
+                </ul>
+            </nav> -->
+            <div class="exercises-list">
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+                <a class="exercise" href="">
+                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
+                    <h4>Id: 1987</h4>
+                </a>
+            </div>
+            <a href="" class="button-blue">More</a>
+        </section>
+        <section class="contact" id="contact">
+            <h2><i></i>Contact Me</h2>
+            <p> I have a diverse set of skills, ranging from design,
+                 to HTML, CSS, Grid Layout, Responsive Desing, Javascript,
+                 Bootstrap, Version control with Git and SCRUM
+            </p>
+            <div class="contact-form">
+                <!-- pending -->
+            </div>
+        </section>
     </main>
-    <footer class="footer">
-      <ul class="menu-footer">
-        <a class="menu-social" href="https://twitter.com/42Joel54">
-          <i class="icon-twitter"></i>
-        </a>
-        <a class="menu-social" href="https://github.com/LimjoJin">
-          <i class="icon-github"></i>
-        </a>
-        <!-- <a class="menu-social" href="">
-          <i class="icon-platzi"> </i>
-        </a> -->
-        <!-- <a class="menu-social" href="">
-          <i class="icon-gmail"></i>
-        </a> -->
-        <a class="menu-social" href="">
-          <i class="icon-instagram"></i>
-        </a>
-      </ul>
-    </footer>
-  </body>
+</body>
 </html>
